@@ -1,4 +1,4 @@
 DIST peapod-0.140.tar.gz 51196 RMD160 0b037a55bc731cacab17457e72c2bd807df1f3a7 SHA1 448e855ff3b8e3c2841f7d18b5d4e9b449516865 SHA256 140f3dfde3f09b96fd75f5e632eaf7b6330854290899101e0863f1d486296cb3
-EBUILD peapod-0.140.ebuild 974 RMD160 a0081b6ccf076f719cb2fb83c8f0533be4ce7bf2 SHA1 df3e5a7f6df90b06a697910216a9af75e0f48ccc SHA256 f491f3007e7da8fe8a828cb870971323a827412539f5e484b87e9df2c35ab278
-MISC ChangeLog 392 RMD160 a0ef16864bdc1c6aa58ba05f99351bd4f973129c SHA1 72e34ba6be2564cd5b085197726cea9e3f51e4da SHA256 f45be3086bb16481f2d366618d31403a348886844c2db0e9ac14a169ec7d60fe
+EBUILD peapod-0.140.ebuild 982 RMD160 0d6fe5ac5306202a7ec29c9cee5b7e04abd680ac SHA1 b94b4d838446cae8302a920348ca807b290fe36e SHA256 e5a9ab8c90eb4cbe647ead229e5c91f95f1193a77e6d18aec9e23f5eee3bd1f7
+MISC ChangeLog 525 RMD160 f38b15c66203f0cd8ea6e7370f5799761c01912a SHA1 212c7164ebf74b4ce674f79090ba2a24db29fba4 SHA256 5dd310f79b526a0120f4024953a7eae6660b0f822d582a642be4b42f287b5f34
 MISC metadata.xml 374 RMD160 52c443dd5eada623d4918e01b61fde99a667ba50 SHA1 54edb0824348273cb0d4fc3b6f8c7eb97f7f5412 SHA256 f7f6cb0ae78246ba4b20794939fd500c8a369988e0bcd5380d8c4b066b485016
